[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/pause_hover.png" type="Texture" id=1]
[ext_resource path="res://assets/pause.png" type="Texture" id=2]
[ext_resource path="res://assets/pause_press.png" type="Texture" id=3]
[ext_resource path="res://fonts/Kenney_Pixel.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/Kenney_Pixel_Square.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/arrowEmpty.png" type="Texture" id=6]
[ext_resource path="res://scenes/Pause.gd" type="Script" id=7]
[ext_resource path="res://scenes/Clickable.gd" type="Script" id=8]
[ext_resource path="res://assets/musicOff.png" type="Texture" id=9]
[ext_resource path="res://assets/musicOff_hover.png" type="Texture" id=10]
[ext_resource path="res://assets/musicOff_press.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Pause" type="MarginContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 430.0
margin_bottom = 316.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 430.0
margin_bottom = 50.0
size_flags_horizontal = 9
size_flags_vertical = 5
alignment = 2

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_top = 2.0
margin_right = 322.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Pause"

[node name="Mute_btn" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 326.0
margin_right = 376.0
margin_bottom = 50.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 10 )

[node name="Pause_btn" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 380.0
margin_right = 430.0
margin_bottom = 50.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 1 )

[node name="PauseMenu" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 54.0
margin_right = 430.0
margin_bottom = 266.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PauseMenu"]
margin_right = 430.0
margin_bottom = 212.0

[node name="ResumeOption" type="HBoxContainer" parent="VBoxContainer/PauseMenu/VBoxContainer"]
margin_right = 430.0
margin_bottom = 50.0
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PauseMenu/VBoxContainer/ResumeOption"]
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="VBoxContainer/PauseMenu/VBoxContainer/ResumeOption"]
margin_left = 54.0
margin_top = 11.0
margin_right = 136.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "Resume"

[node name="RestartOption" type="HBoxContainer" parent="VBoxContainer/PauseMenu/VBoxContainer"]
margin_top = 54.0
margin_right = 430.0
margin_bottom = 104.0
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PauseMenu/VBoxContainer/RestartOption"]
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="VBoxContainer/PauseMenu/VBoxContainer/RestartOption"]
margin_left = 54.0
margin_top = 11.0
margin_right = 206.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 5 )
text = "Restart Level"

[node name="NextOption" type="HBoxContainer" parent="VBoxContainer/PauseMenu/VBoxContainer"]
margin_top = 108.0
margin_right = 430.0
margin_bottom = 158.0
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PauseMenu/VBoxContainer/NextOption"]
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="VBoxContainer/PauseMenu/VBoxContainer/NextOption"]
margin_left = 54.0
margin_top = 11.0
margin_right = 162.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 4 )
text = "Skip Level"

[node name="MainMenuOption" type="HBoxContainer" parent="VBoxContainer/PauseMenu/VBoxContainer"]
margin_top = 162.0
margin_right = 430.0
margin_bottom = 212.0
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PauseMenu/VBoxContainer/MainMenuOption"]
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="VBoxContainer/PauseMenu/VBoxContainer/MainMenuOption"]
margin_left = 54.0
margin_top = 11.0
margin_right = 161.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 3 )
text = "Main Menu"
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Mute_btn" to="." method="_on_Mute_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Pause_btn" to="." method="_on_Pause_btn_pressed"]
